# sprd_bsp_sign

./: .gitmodules  README.md
jingpad/vendor_sprd_proprietories-source_packimage_source/: CMakeLists.txt
jingpad/vendor_sprd_proprietories-source_packimage_source/insertheader/: Android.mk
jingpad/vendor_sprd_proprietories-source_packimage_source/signimage/sansa/: CMakeLists.txt
jingpad/vendor_sprd_proprietories-source_packimage_source/signimage/sprd/common/verify/inc/: sprdsec_header.h
jingpad/vendor_sprd_proprietories-source_packimage_source/signimage/sprd/common/verify/src/: sprd_verify.c
jingpad/vendor_sprd_proprietories-source_packimage_source/signimage/sprd/sign/main/: start.c
kaios/vendor_sprd_proprietories-source_packimage_source/: CMakeLists.txt  libmincrypt.cmake
kaios/vendor_sprd_proprietories-source_packimage_source/signimage/sprd/: CMakeLists.txt
vendor_sprd_proprietories-source_packimage_source/: CMakeLists.txt
vendor_sprd_proprietories-source_packimage_source/insertheader/: imgheaderinsert.c
vendor_sprd_proprietories-source_packimage_source/libmincrypt/: Android.mk  CMakeLists.txt
vendor_sprd_proprietories-source_packimage_source/signimage/sprd/encrypt/main/: encrypt.c
vendor_sprd_proprietories-source_packimage_source/signimage/sprd/mkdbimg/main/: Android.mk  mkdbimg.c
vendor_sprd_proprietories-source_packimage_source/signimage/sprd/mkprimarycert/main/: Android.mk  mkprimarycert.c
vendor_sprd_proprietories-source_packimage_source/splitimg/: Android.mk  splitimg.c
